[project]
name = "lucas-scalable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.5.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.27",
    "langchain-voyageai>=0.1.7",
    "langgraph>=0.6.6",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
